Fix the scrollbar and all the problem with the custom scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,10 @@
   overflow: hidden;
 }
 
+body.modal-open {
+  padding-right: calc(100vw - 100%);
+}
+
 .hidden {
   display: none;
 }
@@ -82,12 +86,31 @@
   box-shadow: 2px 2px rgba(63, 180, 93, 0.5);
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
-
 .h1Shadow {
   text-shadow: 2px 2px #303030;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3FB45D;
+  border-radius: 30px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #36a251;
+  transition: all .1s;
+  cursor: grab;
 }
 
 /* html {
@@ -107,9 +130,6 @@
   * {
     @apply border-border font-sans;
   }
-  /* body {
-    @apply bg-background text-foreground;
-  } */
 
   .containerDesign{
     @apply max-w-[1440px] mx-auto md:px-10 px-5;
